# subscriptions

./: .dockerignore  .env.example  .env.test  .gitignore  .prototools  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  bacon.toml  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
.moon/: toolchain.yml  workspace.yml
.moon/tasks/: rust-backend-application.yml  rust.yml
.zed/: tasks.json
backend/subscriptions/: .env.example  Cargo.toml  Dockerfile  bacon.toml  moon.yml
backend/subscriptions/src/: config.rs  errors.rs  lib.rs  main.rs  startup.rs  state.rs
backend/subscriptions/src/routes/: health.rs  subscriptions.rs
backend/subscriptions/tests/: health.rs
crates/model/: .env.example  .surrealdb  Cargo.toml  moon.yml
crates/model/migrations/definitions/: _initial.json
crates/model/src/: config.rs  errors.rs  lib.rs  manager.rs
crates/model/surrealdb/migrations/definitions/: _initial.json
crates/model/surrealdb/schemas/: script_migration.surql
migrations/definitions/: _initial.json
schemas/: subscription_tokens.surql  subscriptions.surql
src/: config.rs  email_client.rs  errors.rs  handlers.rs  lib.rs  main.rs  model.rs  session_state.rs  startup.rs  state.rs
src/domain/: mod.rs
src/domain/subscriber/: email.rs  mod.rs  name.rs
src/handlers/: health_check.rs  mod.rs  newsletter.rs  subscription.rs
src/handlers/admin/: mod.rs
src/handlers/home/: mod.rs
src/handlers/login/: get.rs  login.html  post.rs
surrealdb/migrations/definitions/: _initial.json
surrealdb/schemas/: sessions.surql  users.surql
tests/: tests.rs
tests/api/: admin_dashboard.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
