[package]
name = "subscriptions"
version = "0.1.0"
publish = false
authors = ["Mustapha Annouaoui <mostafaanawawi@gmail.com>"]
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["tracing"] }
config = "0.15.14"
dotenvy = "0.15.7"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
surrealdb = { version = "2.3.7", features = ["kv-mem"] }
surrealdb-migrations = "2.3.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "request-id"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.7", features = ["serde"] }

[dev-dependencies]
http-body-util = "0.1.3"
mime = "0.3.17"
