[package]
name = "subscriptions"
version = "0.1.0"
publish = false
authors = ["Mustapha Annouaoui <mostafaanawawi@gmail.com>"]
edition = "2024"
license = "MIT"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[dependencies]
axum = { version = "0.8.4", features = ["tracing"] }
config = "0.15.15"
dotenvy = "0.15.7"
reqwest = { version = "0.12.23", default-features = true, features = ["json", "rustls-tls"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-humantime = "0.1.1"
surrealdb = { version = "2.3.7", features = ["kv-mem"] }
surrealdb-migrations = "2.3.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "request-id"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
unicode-segmentation = "1.12.0"
url = { version = "2.5.7", features = ["serde"] }
validator = "0.20.0"
serde_json = "1.0.143"
rand = { version = "0.9.2", features = ["std_rng"] }

[dev-dependencies]
mime = "0.3.17"
fake = "4.4.0"
proptest = "1.7.0"
claims = "0.8.0"
wiremock = "0.6.5"
axum-test = "18.0.2"
linkify = "0.10.0"
