[package]
name = "subscriptions"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
url = { workspace = true }
config = { workspace = true, features = ["convert-case"] }
model = { workspace = true }
rand = { workspace = true }
dotenvy = { workspace = true }
surrealdb = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
surrealdb-migrations = { workspace = true }
