[package]
name = "model"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
surrealdb = { workspace = true }
config = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true }
url = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
secrecy = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
